# Gurksaft

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  reference  tauri.conf.json  todo.md
backend/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
backend/src/: app.rs  learning_data.rs  main.rs  options.rs  sentence_audio.rs  source_data.rs  util.rs
data_packing_utility/: Cargo.toml
data_packing_utility/src/: main.rs
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: _global.scss  index.html  main.ts  styles.scss
frontend/src/app/: animation.ts  app.component.html  app.component.ts  audio-loader.service.ts  common.ts  number-input.directive.ts  ripple.directive.ts  routes.ts
frontend/src/app/add-language/: add-language.component.html  add-language.component.scss  add-language.component.ts
frontend/src/app/download-language-data/: download-language-data.component.html  download-language-data.component.scss  download-language-data.component.ts
frontend/src/app/dropdown/: dropdown.component.html  dropdown.component.scss  dropdown.component.ts
frontend/src/app/dropdown-option/: dropdown-option.component.html  dropdown-option.component.scss  dropdown-option.component.ts
frontend/src/app/learn/: learn.component.html  learn.component.scss  learn.component.ts
frontend/src/app/options/: options.component.html  options.component.scss  options.component.ts
frontend/src/app/statistics/: statistics.component.html  statistics.component.scss  statistics.component.ts
frontend/src/app/weight-distribution/: weight-distribution.component.html  weight-distribution.component.scss  weight-distribution.component.ts
frontend/src/app/word-input/: word-input.component.html  word-input.component.ts
old-ui/: tsconfig.json
old-ui/add_language/: index.html  script.js
old-ui/common/: ui.js
old-ui/main_window/: index.html  script.js
save_data/: words.tsv
source_data/: it_50k.txt  words_by_frequency.txt
src/: app.rs  gui.rs  learning_data.rs  main.rs  options.rs  source_data.rs  util.rs
ui/: index.html  script.js  script.ts  style.css
ui/add_language/: index.html  script.js  script.ts  style.css
ui/common/: style.css  ui.js  ui.ts
ui/main_window/: index.html  script.js  script.ts  style.css
wiktionary-test/: Cargo.toml  word.html
wiktionary-test/src/: main.rs
