[package]
name = "language-learning-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egui = "0.19.0"
# eframe = { version = "0.19.0", features = ["persistence"] }
# iced = { git = "https://github.com/iced-rs/iced.git" }
# iced_native = "0.5.1"
bincode = "1.3"
csv = "1.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.1.1", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.1", features = [] }
