[package]
name = "gurksaft"
version = "0.1.0"
description = ""
authors = ["you"]
license = ""
repository = ""
default-run = "gurksaft"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
bincode = "1.3"
csv = "1.2"
once_cell = "1.18"
ort = "1.15"
piper = { git = "https://github.com/avocadoboi/piper-rs.git" }
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.1.1", features = [ "shell-open", "window-set-title"] }
tokio = { version = "1.21.2", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
