[package]
name = "wiktionary-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tl = { version = "0.7.7", features = ["simd"] }
serde_json = "1.0"
